_scss/_navigation.scss
.navigation {
    &__container {
        width: 100%;
        height: 96px;
        background-color: $white;
        border-bottom: 1px solid #e4e4e7;
        &__inner {
            padding-left: $container-padding;
            padding-right: $container-padding;
            display: flex;
            flex-direction: row;
            align-items: center;
            justify-content: space-around;
        }
        &__global {
            padding-left: 12px;
            @media (min-width: $breakpoint-md) {
                height: 100%;
            }
            background-color: white;
            overflow: hidden;
            white-space: nowrap;
            .navigation__menu__item {
              color: black;
            }
            .navigation__menu__item:hover {
              text-decoration: none;
            }
            @media (max-width: $breakpoint-md) {
                display: flex;
                flex-direction: column;
                gap: 1em;
            }
        }
        &__site {
            @media (max-width: $breakpoint-sm) {
                flex-direction: column;
                padding-bottom: 14px;
                align-items: center;
            }
        }
    }
    &__logo {
        margin-right: 20px;
        display: flex;
        align-content: flex-end;
        align-items: flex-end;
        img {
            height: 20px;
            width: auto;
            margin-bottom: 4px;
        }
        span {
            font-size: 1.25rem;
            font-weight: 300;
            color: $navyblue;
            padding-left: 1rem;
        }
        &:hover {
            text-decoration: none;
        }
        @media (max-width: $breakpoint-md) {
            margin-right: 0px;
        }
    }
    &__menu {
        display: flex;
        flex-direction: column;
        width: 100%;
        @media (min-width: $breakpoint-md) {
            width: auto;
            gap: 1em;
            margin-left: -0.375rem;
            flex-direction: row;
        }
        &__item {
            font-weight: bold;
            padding: 0.375rem;
            border-bottom: 2px solid transparent;
            color: black;
            &:hover {
              text-decoration: none;
            }
            &__active {
                color: $navyblue;
                text-decoration: none;
                border-bottom-color: $babyblue;
            }
        }
    }
    &__alt {
        display: flex;
        width: 100%;
        @media (min-width: $breakpoint-sm) {
            width: auto;
            gap: 1em;
            margin-left: auto;
        }
    }
    &__search {
        min-height: 38px;
        max-width: 100%;
        position: relative;
        padding: 2px;
        margin-left: 0.25rem;
        input {
            padding: 8px 0 6px 2em;
            width: 100%;
            border: 1px solid #dcdcdc;
            outline: 0px solid transparent;
            &::placeholder {
                opacity: 1;
                font-size: 0.75em;
                color: $navyblue;
            }
            &:focus-visible {
                outline-color: $border-color;
            }
        }
    }
    &__toggle {
        display: none;
    }
    // @media (max-width: $breakpoint-md) {
    //     &__wrapper {
    //         display: none;
    //         &__expanded {
    //             display: block;
    //         }
    //     }
    // }
    @media (max-width: $breakpoint-md) {
        &__toggle {
            position: absolute;
            font-size: 1.5rem;
            top: 0.75rem;
            left: 1rem;
            display: block;
            cursor: pointer;
            &__expanded {
                .navigation__toggle__open {
                    display: block;
                }
                .navigation__toggle__close {
                    display: none;
                }
            }
            &__collapsed {
                .navigation__toggle__open {
                    display: none;
                }
                .navigation__toggle__close {
                    display: block;
                }
            }
        }
        &__wrapper {
            display: none;
            &__expanded {
                display: block;
            }
        }
        &__menu__item {
            border-bottom: 0px;
            &:hover {
                text-decoration: none;
            }
        }
    }
}

